--- a/application/client/src/styles/Dashboard.css
+++ b/application/client/src/styles/Dashboard.css
@@ -37,15 +37,6 @@ body{
 .profile-head h6{
     color: #0062cc;
 }
-.profile-edit-btn{
-    border: none;
-    border-radius: 1.5rem;
-    width: 70%;
-    padding: 2%;
-    font-weight: 600;
-    color: #6c757d;
-    cursor: pointer;
-}
 
 .profile-head .nav-tabs{
     margin-bottom:5%;
@@ -59,7 +50,7 @@ body{
     border-bottom:2px solid #0062cc;
 }
 .profile-info{
-    padding: 14%;
+    padding: 5%;
     margin-top: -15%;
 }
 .profile-info p{
@@ -84,3 +75,22 @@ body{
     font-weight: 600;
     color: #0062cc;
 }
+
+#rcorners {
+    border-radius: 25px;
+    border: 2px solid blue;
+    padding: 5px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+  }
+
+
+  .card {
+      padding: 5px;
+      margin: 5px;
+      width: 18rem;
+  }
+  .card-footer {
+      background-color: none !important;
+  }
