--- a/application/server/views/message.ejs
+++ b/application/server/views/message.ejs
@@ -8,6 +8,8 @@
     <h1>Message</h1>
     <form method='POST' action='/message'>
       <textarea name='message' cols='50', rows='10' placeholder="Enter message" required></textarea><br>
+      <input type='hidden' name='m_id' value='<%=m_id%>'>
+      <input type='hidden' name='buy_request' value='<%=buy_request%>'>
       <button type='submit' name='acc_id' value='<%=results%>'>Message<br>
     </form>
   </body>
