Changed front end color scheme to make the site easier to read for users

--- a/application/client/src/App.css
+++ b/application/client/src/App.css
@@ -1,7 +1,8 @@
 :root {
   --mainYellow:#ffa400;
   --mainBlue:#9932CC;
-  --mainDark:#232528;
+  --mainDark:#252328;
+  --mainPurple: #6600ff;
   --lightBlue:#FFD700;
   --mainWhite:#f3f3f3;
 }
