rerouting logged out users

--- a/application/client/src/App.css
+++ b/application/client/src/App.css
@@ -3,7 +3,7 @@
   --mainBlue:#9932CC;
   --mainDark:#252328;
   --mainPurple: #9932CC;
-  --lightBlue:#FFD700;
+  --lightBlue:#ffc355;
   --mainWhite:#f3f3f3;
   --mainBlack: #474753;
   --buttonBG: #ececec;
