--- a/application/client/src/App.css
+++ b/application/client/src/App.css
@@ -7,6 +7,8 @@
   --mainWhite:#f3f3f3;
   --mainBlack: #474753;
   --buttonBG: #ececec;
+  --acceptButton: #6dff6d;
+  --rejectButton: #ff4848;
   
   --cardFooter: #acacac;
   --cardHighlight: #ffc966;
